# ImageTools

./: CMakeLists.txt  README.md
src/: genThumbnail.cpp
